--- a/public/real/blog-masonry.html
+++ b/public/real/blog-masonry.html
@@ -205,7 +205,7 @@
               <li class="grid-item post format-gallery">
                 <div class="grid-item-inner">
                   <div class="media-box">
-                    <div class="flexslider" data-autoplay="yes" data-pagination="yes" data-arrows="yes" data-style="slide" data-pause="yes">
+                    <div class="flexslider" data-autoplay="false" data-pagination="yes" data-arrows="yes" data-style="slide" data-pause="yes">
                       <ul class="slides">
                         <li class="item"><a href="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER" data-rel="prettyPhoto[postname]"><img src="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER" alt=""></a></li>
                         <li class="item"><a href="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER" data-rel="prettyPhoto[postname]"><img src="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER" alt=""></a></li>
@@ -245,7 +245,7 @@
               <li class="grid-item post format-gallery">
                 <div class="grid-item-inner">
                   <div class="media-box">
-                    <div class="flexslider" data-autoplay="yes" data-pagination="yes" data-arrows="yes" data-style="slide" data-pause="yes">
+                    <div class="flexslider" data-autoplay="false" data-pagination="yes" data-arrows="yes" data-style="slide" data-pause="yes">
                       <ul class="slides">
                         <li class="item"><a href="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER" data-rel="prettyPhoto[postname]"><img src="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER" alt=""></a></li>
                         <li class="item"><a href="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER" data-rel="prettyPhoto[postname]"><img src="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER" alt=""></a></li>
