--- a/public/real/index.html
+++ b/public/real/index.html
@@ -176,7 +176,7 @@
   <div class="site-showcase">
     <div class="slider-mask overlay-transparent"></div>
     <!-- Start Hero Slider -->
-    <div class="hero-slider flexslider clearfix" data-autoplay="yes" data-pagination="no" data-arrows="yes" data-style="fade" data-pause="yes">
+    <div class="hero-slider flexslider clearfix" data-autoplay="false" data-pagination="no" data-arrows="yes" data-style="fade" data-pause="yes">
       <ul class="slides">
         <li class=" parallax" style="background-image:url(http://placehold.it/1200x500&amp;text=IMAGE+PLACEHOLDER);">
           <div class="flex-caption">
@@ -631,7 +631,7 @@
             <a href="about.html" class="btn btn-primary btn-sm pull-right">All partners <i class="fa fa-long-arrow-right"></i></a>
          </div>
          <div class="row">
-            <ul class="owl-carousel" id="clients-slider" data-columns="6" data-autoplay="yes" data-pagination="no" data-arrows="no" data-single-item="no" data-items-desktop="6" data-items-desktop-small="4" data-items-mobile="2" data-items-tablet="4">
+            <ul class="owl-carousel" id="clients-slider" data-columns="6" data-autoplay="false" data-pagination="no" data-arrows="no" data-single-item="no" data-items-desktop="6" data-items-desktop-small="4" data-items-mobile="2" data-items-tablet="4">
               <li class="item"> <a href="#"><img src="images/partner-1.png" alt=""></a> </li>
               <li class="item"> <a href="#"><img src="images/partner-2.png" alt=""></a> </li>
               <li class="item"> <a href="#"><img src="images/partner-3.png" alt=""></a> </li>
